# app/lib/api/definitions/search.py
@@ -1,0 +1,6 @@
+class Search:
+    def __init__(self):
+        self.page = 0
+        self.pages = 0
+        self.count = 0
+        self.results = []
