# app/lib/api/definitions/search_result.py
@@ -1,0 +1,9 @@
+class SearchResult:
+    def __init__(self):
+        self.id = 0
+        self.domain = ''
+        self.source_ip = ''
+        self.type = ''
+        self.matched = False
+        self.forwarded = False
+        self.date = ''
